OP-537 standardize table column headings

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -88,6 +88,7 @@ angal.common.address.txt                                                        
 angal.common.age.txt                                                             = Age
 angal.common.all.txt                                                             = All
 angal.common.alltypes.txt                                                        = All Types
+angal.common.amount.txt                                                          = Amount
 angal.common.arterialpressureabbr.txt                                            = AP
 angal.common.city.txt                                                            = City
 angal.common.code.txt                                                            = Code
@@ -114,6 +115,7 @@ angal.common.result.txt                                                         
 angal.common.selectsex.txt                                                       = Select Sex
 angal.common.search.txt                                                          = Search
 angal.common.sex.txt                                                             = Sex
+angal.common.status.txt                                                          = Status
 angal.common.telephone.txt                                                       = Telephone
 angal.common.temperatureabbr.txt                                                 = T
 angal.common.to.txt                                                              = To
@@ -434,12 +436,17 @@ angal.visit.today.btn.key                                                       
 #########################################################
 # Column headers for browser modules (keys end in '.col')
 #########################################################
+# BillBrowser
+angal.billbrowser.patientID.col                                                  = Pat. ID
+angal.billbrowser.lastpayment.col                                                = Last Payment
+angal.billbrowser.balance.col                                                    = Balance
+# PatientBillEdit
+angal.newbill.item.col                                                           = Item
 # AdmittedPatientBrowser
 angal.admission.cityaddresstelephonenote.col                                     = City / Address / Telephone / Note
 # PatientDataBrowser
 angal.admission.diagnosisin.col                                                  = Diagnosis In
 angal.admission.diagnosisout.col                                                 = Diagnosis Out
-angal.admission.status.col                                                       = Status
 # PatientFolderBrowser
 # AdmissionTypeBrowser
 # AgeTypeBrowser
@@ -457,6 +464,7 @@ angal.exa.default.col                                                           
 # LabBrowser
 angal.malnutrition.datesupp.col                                                  = Further Date
 angal.malnutrition.dateconf.col                                                  = Approval Date
+# LabNew
 # MedicalBrowser
 angal.medicals.pcsperpck.col                                                     = PcsXPck
 angal.medicals.stock.col                                                         = Stock
@@ -1013,7 +1021,6 @@ angal.agetype.newagetyperecord                                                  
 angal.agetype.pleaseinsertadescription                                           = Please insert a description
 angal.agetype.to                                                                 = To
 angal.billbrowser.amount                                                         = Amount
-angal.billbrowser.balance                                                        = Balance
 angal.billbrowser.billalreadyclosed                                              = Bill already closed
 angal.billbrowser.billdeleted                                                    = Bill Deleted
 angal.billbrowser.billnotyetclosed                                               = This bill is still open
@@ -1023,14 +1030,12 @@ angal.billbrowser.doyoureallywanttodeletetheselectedbill                        
 angal.billbrowser.from                                                           = From
 angal.billbrowser.fullreportallbills                                             = Full Report (all bills)
 angal.billbrowser.id                                                             = ID
-angal.billbrowser.lastpayment                                                    = Last Payment
 angal.billbrowser.month                                                          = Month
 angal.billbrowser.notpaid                                                        = Not Paid:
 angal.billbrowser.openbillsreport                                                = opened bills report
 angal.billbrowser.openedbillslist                                                = Pending Bills
 angal.billbrowser.othermonth                                                     = other Month...
 angal.billbrowser.patient                                                        = Patient
-angal.billbrowser.patientID                                                      = Pat. ID
 angal.billbrowser.patientstatement                                               = Patient's Statement
 angal.billbrowser.pending                                                        = Pending
 angal.billbrowser.period                                                         = Period
@@ -1041,7 +1046,6 @@ angal.billbrowser.pleaseselectapatient                                          
 angal.billbrowser.pleaseselectareport                                            = Please select a report
 angal.billbrowser.pleaseselectonebillonly                                        = Please select one Bill only
 angal.billbrowser.shortreportonlybaddebts                                        = Short Report (only BadDebts bills)
-angal.billbrowser.status                                                         = Status
 angal.billbrowser.thismonth                                                      = this Month
 angal.billbrowser.to                                                             = To
 angal.billbrowser.today                                                          = Today
@@ -1581,7 +1585,6 @@ angal.newbill.invalidprice                                                      
 angal.newbill.invalidpricepleasetryagain                                         = Invalid price!\nPlease try again.
 angal.newbill.invalidquantity                                                    = Invalid Quantity
 angal.newbill.invalidquantitypleasetryagain                                      = Invalid Quantity!\nPlease try again.
-angal.newbill.item                                                               = Item
 angal.newbill.list                                                               = List
 angal.newbill.medical                                                            = Medical
 angal.newbill.newdescription                                                     = new description
