OP-537 standardize table column headings

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -96,6 +96,7 @@ angal.common.codemaxchars.fmt.txt                                               
 angal.common.codemax1char.txt                                                    = Code (max 1 char)
 angal.common.date.txt                                                            = Date
 angal.common.description.txt                                                     = Description
+angal.common.discharge.txt                                                       = Discharge
 angal.common.email.txt                                                           = E-mail
 angal.common.exam.txt                                                            = Exam
 angal.common.fax.txt                                                             = Fax
@@ -110,17 +111,22 @@ angal.common.new.txt                                                            
 angal.common.note.txt                                                            = Note
 angal.common.patient.txt                                                         = Patient
 angal.common.qty.txt                                                             = Qty
+angal.common.quantity.txt                                                        = Quantity
 angal.common.reminder.txt                                                        = Reminder
 angal.common.result.txt                                                          = Result
 angal.common.selectsex.txt                                                       = Select Sex
 angal.common.search.txt                                                          = Search
 angal.common.sex.txt                                                             = Sex
+angal.common.sms.txt                                                             = SMS
+angal.common.smsmanager.txt                                                      = SMS Manager
 angal.common.status.txt                                                          = Status
 angal.common.telephone.txt                                                       = Telephone
 angal.common.temperatureabbr.txt                                                 = T
 angal.common.to.txt                                                              = To
 angal.common.total.txt                                                           = Total
 angal.common.type.txt                                                            = Type
+angal.common.undefined.txt                                                       = Undefined
+angal.common.units.txt                                                           = Units
 angal.common.ward.txt                                                            = Ward
 angal.common.weight.txt                                                          = Weight
 
@@ -479,6 +485,12 @@ angal.medicalstock.prepdate.col                                                 
 angal.medicalstock.duedate.col                                                   = Due Date
 angal.medicalstock.origin.col                                                    = Origin
 angal.medicalstock.cost.col                                                      = Cost
+# WardPharmacy
+angal.wardpharmacy.medical.col                                                   = Medical
+angal.wardpharmacy.lotnumber.col                                                 = Lot No.
+angal.wardpharmacy.lotduedate.col                                                = Lot Due Date
+angal.wardpharmacy.purpose.col                                                   = Purpose
+# WardPharmacyNew
 # MedicaldsrstockmovTypeBrowser
 # MedicalTypeBrowser
 # UserBrowsing
@@ -499,6 +511,15 @@ angal.operation.operationcontext.col                                            
 angal.patvac.vaccine.col                                                         = Vaccine
 angal.patvac.vaccinetype.col                                                     = Vaccine Type
 # PregnantTreatmentTypeBrowser
+# ListBrowser
+angal.priceslist.currency.col                                                    = Currency
+# PricesOthersBrowser
+angal.pricesothers.opd.col                                                       = OPD
+angal.pricesothers.ipd.col                                                       = IPD
+angal.pricesothers.daily.col                                                     = Daily
+# SmsBrowser
+angal.sms.scheduleddate.col                                                      = Sched. Date
+angal.sms.sent.col                                                               = Sent
 # SupplierBrowser
 angal.supplier.taxcode.col                                                       = Tax Number ID
 angal.supplier.deleted.col                                                       = Deleted
@@ -780,7 +801,7 @@ angal.lab.positive.txt                                                          
 angal.lab.undefined.txt                                                          = Undefined
 angal.lab.blood.txt                                                              = Blood
 angal.lab.urine.txt                                                              = Urine
-angal.lab.sputum.txt                                                                 = Sputum
+angal.lab.sputum.txt                                                             = Sputum
 angal.lab.stool.txt                                                              = Stool
 angal.lab.cfs.txt                                                                = CFS
 angal.lab.swabs.txt                                                              = Swabs
@@ -1338,8 +1359,8 @@ angal.medicalstock.inserttheoriginofthepharmaceutical                           
 angal.medicalstock.insertthepreparationdate                                      = Insert the preparation date
 angal.medicalstock.jms                                                           = JMS
 angal.medicalstock.keep                                                          = Keep
-angal.medicalstock.lotduedate                                                    = Lot Due Date
 angal.medicalstock.lotid                                                         = Lot id
+angal.medicalstock.lotduedate                                                    = Lot Due Date
 angal.medicalstock.lotpanel                                                      = Lot Panel
 angal.medicalstock.lotpreparationdate                                            = Lot Preparation Date
 angal.medicalstock.medical                                                       = Medical
@@ -1472,7 +1493,6 @@ angal.medicalstockward.patient.quantity                                         
 angal.medicalstockward.patient.units                                             = Units
 angal.medicalstockward.pieces                                                    = \ pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Please select an Outcomes movement first
-angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
 angal.medicalstockward.rectify.expiringdate                                      = Expiring
@@ -1585,6 +1605,7 @@ angal.newbill.invalidprice                                                      
 angal.newbill.invalidpricepleasetryagain                                         = Invalid price!\nPlease try again.
 angal.newbill.invalidquantity                                                    = Invalid Quantity
 angal.newbill.invalidquantitypleasetryagain                                      = Invalid Quantity!\nPlease try again.
+angal.newbill.item                                                               = Item
 angal.newbill.list                                                               = List
 angal.newbill.medical                                                            = Medical
 angal.newbill.newdescription                                                     = new description
@@ -1607,7 +1628,6 @@ angal.newbill.associateapatientwiththisbill.tooltip                             
 angal.newbill.changethepatientassociatedwiththisbill.tooltip                     = Change the patient associated with this bill
 angal.newbill.removepatientassociatedwiththisbill.tooltip                        = Remove patient associated with this bill
 angal.newbill.totalm                                                             = Total
-angal.newbill.undefined                                                          = Undefined
 angal.newbill.youcannotdeletealreadysaveditems                                   = You cannot delete already saved items
 angal.newbill.youcannotdeletepastpayments                                        = You cannot delete past payments
 
@@ -1764,14 +1784,12 @@ angal.priceslist.adescription                                                   
 angal.priceslist.aname                                                           = a Name
 angal.priceslist.changelist                                                      = Change List
 angal.priceslist.copyof                                                          = Copy of
-angal.priceslist.currency                                                        = Currency
 angal.priceslist.currencystar                                                    = Currency*
 angal.priceslist.descriptionstar                                                 = Description*
 angal.priceslist.doyoureallywanttochangelist                                     = Do you really want to change list?
 angal.priceslist.doyoureallywanttodeletethislistandallitsprices                  = Do you really want to delete this list and all its prices?
 angal.priceslist.enterthenameforthenewlist                                       = Enter the Name for the new list:
 angal.priceslist.exams                                                           = Exams
-angal.priceslist.idm                                                             = ID
 angal.priceslist.invalidfactor                                                   = Invalid Factor
 angal.priceslist.invalidfactorpleasetryagain                                     = Invalid Factor!\nPlease try again.
 angal.priceslist.invalidmultiplier                                               = Invalid Multiplier
@@ -1782,7 +1800,6 @@ angal.priceslist.listm                                                          
 angal.priceslist.listsaved                                                       = List saved
 angal.priceslist.medicals                                                        = Medicals
 angal.priceslist.multiplier                                                      = Multiplier
-angal.priceslist.name                                                            = Name
 angal.priceslist.namestar                                                        = Name*
 angal.priceslist.nolist                                                          = No List
 angal.priceslist.operations                                                      = Operations
@@ -1798,28 +1815,20 @@ angal.priceslist.savelist                                                       
 angal.priceslist.sorryatleastonelist                                             = Sorry, at least one List
 angal.priceslist.thedatacouldnotbedeleted                                        = The data could not be deleted
 angal.priceslist.thiswillsavecurrentpricescontinue                               = This will SAVE current prices, continue?
-angal.pricesothers.daily                                                         = Daily
 angal.pricesothers.discharge                                                     = Discharge
 angal.pricesothers.doyoureallywanttodeletethisitem                               = Do you really want to delete this item?
-angal.pricesothers.ipdm                                                          = IPD
-angal.pricesothers.opdm                                                          = OPD
 angal.pricesothers.othm                                                          = OTH
 angal.pricesothers.pleaseinsertadescription                                      = Please insert a Description
 angal.pricesothers.pleaseselectanitemtodelete                                    = Please select an item to delete
 angal.pricesothers.pleaseselectanitemtoedit                                      = Please select an item to edit
 angal.pricesothers.thedatacouldnotbedeleted                                      = The data could not be deleted
-angal.pricesothers.undefined                                                     = Undefined
 angal.sms.Characters                                                             = Characters
 angal.sms.chars                                                                  = chars
 angal.sms.deleteselectedsms                                                      = Delete selected SMS
 angal.sms.doyouwanttosplitinmoremessages                                         = Do you want to split in more messages
 angal.sms.number                                                                 = Number
 angal.sms.scheduleddate                                                          = Scheduled Date
-angal.sms.scheduleddatetitle                                                     = Sched. Date
 angal.sms.scheduledtime                                                          = Scheduled Time
-angal.sms.sent                                                                   = Sent
-angal.sms.sms                                                                    = SMS
-angal.sms.telephone                                                              = Telephone
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Couldn't find the data, it has probably been deleted.
 angal.sql.operationnotpermittedprotectedelement                                  = Operation not permitted, protected element.
 angal.sql.thedatacouldnotbesaved                                                 = The data could not be saved
