Chore: Re-Attendance

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -669,7 +669,7 @@ angal.login.passwordiisncorrectpleaseretry.msg                                  
 angal.opd.opdnumber.txt                                                          = OPD No.
 angal.opd.diseasetype.txt                                                        = Disease Type
 angal.opd.alldiseases.txt                                                        = All Diseases
-angal.opd.reattendance.txt                                                       = Readmittance
+angal.opd.reattendance.txt                                                       = Re-Attendance
 angal.opd.newattendance.txt                                                      = New Admittance
 angal.opd.attendancedate.txt                                                     = Admittance Date
 angal.opd.selectadisease.txt                                                     = Select a Disease
