--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1109,7 +1109,7 @@ angal.common.codem                                                              
 angal.common.codestar                                                            = Code *
 angal.common.date                                                                = Date
 angal.common.datefrom                                                            = Date From:
-angal.common.datem                                                               = DATE = DESCRIPTION
+angal.common.datem                                                               = DATE
 angal.common.doyouwanttoproceed                                                  = Do you want to proceed?
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = From
