OP-541 Standardize "accounting"

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -588,7 +588,7 @@ angal.billbrowser.periodcolon.txt                                               
 angal.billbrowser.user.txt                                                       = User
 angal.billbrowser.thebilldeleted.msg                                             = The bill is deleted.
 angal.billbrowser.thebillisstillopen.msg                                         = This bill is still open.
-angal.billbrowser.youcannoteditaclosedbill                                       = You cannot edit a closed bill (Admin can)
+angal.billbrowser.youcannoteditaclosedbill.msg                                   = You cannot edit a closed bill (Admin can)
 # BillItemPicker
 angal.billitempicker.find.txt                                                    = Find
 # PatientBillEdit
