--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -105,6 +105,7 @@ angal.common.from.txt                                                           
 angal.common.group.txt                                                           = Group
 angal.common.height.txt                                                          = Height
 angal.common.id.txt                                                              = ID
+angal.common.laboratory.txt                                                      = Laboratory
 angal.common.male.txt                                                            = Male
 angal.common.name.txt                                                            = Name
 angal.common.new.txt                                                             = New
@@ -128,6 +129,7 @@ angal.common.total.txt                                                          
 angal.common.type.txt                                                            = Type
 angal.common.undefined.txt                                                       = Undefined
 angal.common.units.txt                                                           = Units
+angal.common.unknown.txt                                                         = Unknown
 angal.common.ward.txt                                                            = Ward
 angal.common.weight.txt                                                          = Weight
 
@@ -151,6 +153,8 @@ angal.admtype.editadmissiontype.title                                           
 angal.agetype.agetypebrowser.title                                               = Age Type Browser
 angal.billbrowser.patientbillmanagment.title                                     = Patient Bills Management
 angal.dicomviewer.title                                                          = DICOM Viewer
+angal.dicomview.zoom.title                                                       = Zoom
+angal.dicomview.frames.title                                                     = Frames
 angal.dicomtype.dicomtypebrowser.title                                           = DICOM Type Browser
 angal.dicomtype.newdicomtype.title                                               = New DICOM Type
 angal.dicomtype.editdicomtype.title                                              = Edit DICOM Type
@@ -647,6 +651,10 @@ angal.admission.count.fmt.txt                                                   
 angal.admission.admissiondate.txt                                                = Admission Date *
 angal.admission.dischargedate.txt                                                = Discharge Date
 angal.admission.treatmenttype.border                                             = Treatment Type
+
+angal.admission.sharealertwithnobody.txt                                         = -- Share alert with: nobody --
+angal.admission.newpatientadmissionin.fmt.msg                                    = New patient admission: {0} in {1}.
+angal.admisssion.discharedpatientfor.fmt.msg                                     = Discharged patient: {0} for {1}.
 
 # Patient Data dialog
 angal.admission.taxcode.label                                                    = Tax Number ID
@@ -1435,6 +1443,8 @@ angal.priceslist.pleasecreatealistfirst                                         
 angal.priceslist.pleaseselectalisttocopy                                         = Please select a List to copy
 angal.priceslist.pleaseselectalisttodelete                                       = Please select a List to delete
 angal.priceslist.pleaseselectalisttoedit                                         = Please select a List to edit
+angal.priceslist.prices.txt                                                      = Prices
+angal.priceslist.failed.txt                                                      = Failed
 angal.priceslist.roundingfactor                                                  = Rounding Factor
 angal.priceslist.rounduptothenearest                                             = Round up to the nearest...
 angal.priceslist.savelist                                                        = Save List
@@ -1579,6 +1589,8 @@ angal.ward.select                                                               
 angal.ward.wardwithpharmacy                                                      = Ward with pharmacy
 angal.wardpharmacynew.selectward                                                 = Select a ward
 angal.wardpharmacynew.ward                                                       = Another ward
+angal.wardpharmacy.stockwardledger.txt                                           = StockWard Ledger
+angal.xmpp.communication                                                         = Communication
 angal.xmpp.contacts                                                              = Contacts
 angal.xmpp.getinfo                                                               = Get info
 angal.xmpp.info                                                                  = info
