OP-543 review comment

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1034,7 +1034,7 @@ angal.ward.theemailmustbevalid.msg                                              
 angal.ward.theselectedwardhaspatients.fmt.msg                                    = The selected ward has {0} patients.
 angal.ward.pleasecheckinadmissionpatients.msg                                    = Please check in admission / patients.
 angal.ward.maternity.txt                                                         = Maternity
-angal.ward.cannotdeletematernityward.msg                                         = Cannot delete maternity ward.
+angal.ward.cannotdeletematernityward.msg                                         = Cannot delete Maternity ward.
 
 ##########################################################
 # Remaining original key/values that need review/work/etc.
