OP-523 Part 1; review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -20,7 +20,7 @@ angal.common.error.title                                                        
 angal.common.warning.title                                                       = Warning
 angal.common.info.title                                                          = Information
 angal.common.question.title                                                      = Question
-angal.common.plain.title                                                         = Note
+angal.common.note.title                                                          = Note
 
 ########################################
 # Common button text and short cut keys
