Chore: use fmt.title instead of string concatenation

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -259,6 +259,7 @@ angal.ward.editward.title                                                       
 angal.ward.wardbrowser.title                                                     = Ward Browser
 angal.visit.addvisit.title                                                       = Add Visit
 angal.visit.worksheet.title                                                      = Worksheet
+angal.xmpp.communication.fmt.title                                               = Communication - {0}
 
 ################################################
 # Module specific button text and short cut keys
@@ -1578,7 +1579,6 @@ angal.ward.select                                                               
 angal.ward.wardwithpharmacy                                                      = Ward with pharmacy
 angal.wardpharmacynew.selectward                                                 = Select a ward
 angal.wardpharmacynew.ward                                                       = Another ward
-angal.xmpp.communication                                                         = Communication
 angal.xmpp.contacts                                                              = Contacts
 angal.xmpp.getinfo                                                               = Get info
 angal.xmpp.info                                                                  = info
