OP-523 Part 1; review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -17,10 +17,7 @@
 # Common dialog titles
 #######################
 angal.common.error.title                                                         = Error
-angal.common.warning.title                                                       = Warning
 angal.common.info.title                                                          = Information
-angal.common.question.title                                                      = Question
-angal.common.note.title                                                          = Note
 
 ########################################
 # Common button text and short cut keys
@@ -147,6 +144,7 @@ angal.admission.patientfolder.drugs.title                                       
 angal.admission.patientfolder.exams.title                                        = Exams
 angal.admission.patientfolder.operations.title                                   = Operations
 angal.admission.report.title                                                     = Report
+angal.admission.note.title                                                       = Note
 angal.admtype.admissiontypebrowser.title                                         = Admission Type Browser
 angal.admtype.newadmissiontype.title                                             = New Admission Type
 angal.admtype.editadmissiontype.title                                            = Edit Admission Type
@@ -187,6 +185,11 @@ angal.lab.newlaboratoryexam.title                                               
 angal.lab.editlaboratoryexam.title                                               = Edit Laboratory Exam 
 angal.login.title                                                                = Login
 angal.mainmenu.fmt.title                                                         = User: {0}
+angal.messagedialog.error.title                                                  = Error
+angal.messagedialog.warning.title                                                = Warning
+angal.messagedialog.info.title                                                   = Information
+angal.messagedialog.question.title                                               = Question
+angal.messagedialog.note.title                                                   = Note
 angal.userbrowser.title                                                          = User Browser
 angal.userbrowser.addnewuser.title                                               = Add New User
 angal.userbrowser.edituser.title                                                 = Edit User
