--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -95,6 +95,7 @@ angal.common.code.txt                                                           
 angal.common.codemaxchars.fmt.txt                                                = Code (max {0} chars)
 angal.common.codemax1char.txt                                                    = Code (max 1 char)
 angal.common.date.txt                                                            = Date
+angal.common.days.txt                                                            = Days
 angal.common.description.txt                                                     = Description
 angal.common.discharge.txt                                                       = Discharge
 angal.common.email.txt                                                           = E-mail
@@ -106,6 +107,7 @@ angal.common.group.txt                                                          
 angal.common.height.txt                                                          = Height
 angal.common.id.txt                                                              = ID
 angal.common.male.txt                                                            = Male
+angal.common.months.txt                                                          = Months
 angal.common.name.txt                                                            = Name
 angal.common.new.txt                                                             = New
 angal.common.notapplicable.txt                                                   = N/A
@@ -130,6 +132,7 @@ angal.common.undefined.txt                                                      
 angal.common.units.txt                                                           = Units
 angal.common.ward.txt                                                            = Ward
 angal.common.weight.txt                                                          = Weight
+angal.common.years.txt                                                           = Years
 
 ################################
 # Window/dialog titles
@@ -227,6 +230,7 @@ angal.patientbill.editpatientbill.fmt.title                                     
 angal.patvac.newpatientvaccine.title                                             = New Patient Vaccine
 angal.patvac.edipatientvaccine.title                                             = Edit Patient Vaccine
 angal.patvac.patientvaccinebrowser.title                                         = Patient Vaccine Browser
+angal.photoframe.photopreview.title                                              = Photo Preview
 angal.preagtreattype.pregnanttreatmenttypebrowser.title                          = Pregnant Treatment Type Browser
 angal.preagtreattype.newpregnanttreatmenttype.title                              = New Pregnant Treatment Type
 angal.preagtreattype.editpregnanttreatmenttype.title                             = Edit Pregnant Treatment Type
@@ -237,6 +241,8 @@ angal.priceslist.editlist.title                                                 
 angal.pricesothers.otherpricesbrowser.title                                      = Other Prices Browser
 angal.pricesothers.newprice.title                                                = New Price
 angal.pricesothers.editprice.title                                               = Edit Price
+angal.showpreload.loadingmultipleimages.fmt.title                                = Loading Multiple Images {0}
+angal.showpreload.loadimage.title                                                = Load Image
 angal.sms.newsms.title                                                           = New SMS
 angal.sms.smsmanager.title                                                       = SMS Manager
 angal.stat.diseasereport.title                                                   = Disease Report
@@ -632,7 +638,7 @@ angal.newbill.paymentmadebeforebilldate.msg                                     
 angal.newbill.thedateisbeforethelastpayment.msg                                  = The date is before the last payment.
 angal.newbill.invalidpricepleasetryagain.msg                                     = Invalid price. Please try again.
 angal.newbill.youcannotdeletealreadysaveditems.msg                               = You cannot delete already saved items.
-
+angal.newbill.topay.txt                                                          = TO PAY
 
 #########################
 # Admission
@@ -730,6 +736,8 @@ angal.admission.theoperationdatenewerthan.fmt.msg                               
 
 angal.admission.opd.txt                                                          = OPD
 angal.admission.admission.txt                                                    = Admission
+
+angal.admission.o2.txt                                                           = O2
 
 ######################
 # Login dialog
@@ -1077,7 +1085,6 @@ angal.dicom.delete.title                                                        
 angal.dicom.delete.yes                                                           = Yes
 angal.dicom.err                                                                  = Error
 angal.dicom.image.frames                                                         = Frames
-angal.dicom.image.patient.age                                                    = Age
 angal.dicom.image.patient.dicom                                                  = DICOM Patient
 angal.dicom.image.patient.oh                                                     = Patient
 angal.dicom.image.serie.n                                                        = Number series
@@ -1086,7 +1093,6 @@ angal.dicom.image.zoom                                                          
 angal.dicom.loading                                                              = Loading...
 angal.dicom.open.txt                                                             = Open DICOM
 angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty                         = The file is too big. Please set 'dicom.max.size' into dicom.properties
-angal.dicom.thumbnail.age                                                        = Age
 angal.dicom.thumbnail.category                                                   = Category
 angal.dicom.thumbnail.modality                                                   = Modality
 angal.dicom.thumbnail.patient                                                    = Patient
@@ -1145,7 +1151,6 @@ angal.hospital.currencycod                                                      
 angal.hospital.emailaddress                                                      = Email address
 angal.hospital.faxnumber                                                         = Fax number
 angal.hospital.savethechanges.msg                                                = Save the changes?
-angal.lab.age                                                                    = Age
 angal.lab.datapatient                                                            = Patient's Data
 angal.lab.exam                                                                   = Exam
 angal.lab.in                                                                     = In
@@ -1195,6 +1200,7 @@ angal.medicals.thismonth                                                        
 angal.medicals.today                                                             = Today
 angal.medicals.type                                                              = Type
 angal.medicals.withlot                                                           = With lots
+angal.medicals.stock.txt                                                         = Stock
 angal.medicalstock.chooseamedical.msg                                            = Choose a medical.
 angal.medicalstock.chooseavalidduedate.msg                                       = Choose a valid due date.
 angal.medicalstock.chooseavalidmovementdate.msg                                  = Choose a valid movement date.
@@ -1268,10 +1274,7 @@ angal.medicalstock.selectionpanel                                               
 angal.medicalstock.type                                                          = Type
 angal.medicalstock.typeacodeoradescriptionandpressenter                          = Type a code or a description and press ENTER
 angal.medicalstock.ward                                                          = Ward
-angal.medicalstockward.age                                                       = Age
-angal.medicalstockward.agefrom                                                   = Age From:
 angal.medicalstockward.agefrommustbelowerthanageto                               = 'Age from' must be lower than 'Age to'
-angal.medicalstockward.ageto                                                     = Age To:
 angal.medicalstockward.allmedicals                                               = All Medicals
 angal.medicalstockward.count                                                     = Count
 angal.medicalstockward.drugs                                                     = Drugs
@@ -1311,7 +1314,6 @@ angal.medicalstockward.rectify.unitcost                                         
 angal.medicalstockward.selectaward                                               = <select a ward>
 angal.medicalstockward.ward                                                      = WARD
 angal.medicalstockward.weightfrommustbelowerthanweightto                         = 'Weight from' must be lower than 'Weight to'
-angal.medicalstockwardedit.age                                                   = Age
 angal.medicalstockwardedit.changepatient                                         = Change Patient
 angal.medicalstockwardedit.changethepatientassociatedwiththismovement            = Change the Patient associated with this movement
 angal.medicalstockwardedit.drug                                                  = Drug
@@ -1348,7 +1350,6 @@ angal.operationrowlist.date                                                     
 angal.operationrowlist.errosdel                                                  = Error occurs during processing
 angal.operationrowlist.natureop                                                  = Operation designation 
 angal.operationrowlist.successdel                                                = Operation deleted
-angal.patient.age                                                                = Age
 angal.patient.agestar                                                            = Age *
 angal.patient.alive                                                              = Alive
 angal.patient.birthdate                                                          = Birth Date
@@ -1389,11 +1390,14 @@ angal.patient.taxcode                                                           
 angal.patient.thepatientisalreadypresent.msg                                     = The patient is already present; continue?
 angal.patient.tobm                                                               = TOB
 angal.patient.unknown                                                            = Unknown
+angal.patient.pleaseselectasex.msg                                               = Please select a sex.
 angal.patient.yes                                                                = Yes
-angal.patvac.age                                                                 = Age
-angal.patvac.agefrom                                                             = Age From:
+angal.patient.ymd.fmt.msg                                                        = {0}y {1}m {2}d
+angal.patientphoto.imagefiles.txt                                                = Image files
+angal.photoboothcomponent.webcam.txt                                             = Webcam
+angal.photoboothcomponent.resolution.txt                                         = Resolution
+angal.photoframe.originalpicitureresoultion.fmt.txt                              = Original picture resolution: {0}
 angal.patvac.agefrommustbelowerthanageto                                         = 'Age from' must be lower than 'Age to'
-angal.patvac.ageto                                                               = Age To:     
 angal.patvac.allvaccine                                                          = All vaccines
 angal.patvac.allvaccinetype                                                      = All Type
 angal.patvac.count                                                               = Count
@@ -1445,6 +1449,9 @@ angal.pricesothers.othm                                                         
 angal.pricesothers.pleaseselectanitemtodelete                                    = Please select an item to delete
 angal.pricesothers.pleaseselectanitemtoedit                                      = Please select an item to edit
 angal.pricesothers.thedatacouldnotbedeleted                                      = The data could not be deleted
+angal.pricesothers.daily.txt                                                     = Daily
+angal.showpreload.otherdates.txt                                                 = Other Dates
+angal.showpreload.category.txt                                                   = Category
 angal.sms.Characters                                                             = Characters
 angal.sms.doyouwanttosplitinmoremessages                                         = Do you want to split in more messages
 angal.sms.number                                                                 = Number
@@ -1499,6 +1506,7 @@ angal.stat.weeklyepidemsurveil                                                  
 angal.stat.weeklyepidemsurveilover5                                              = HMIS 33b - Weekly epidem. surveil. over 5 y.o.
 angal.stat.weeklyepidemsurveilunder5                                             = HMIS 33b - Weekly epidem. surveil. under 5 y.o.
 angal.stat.year                                                                  = Year
+angal.stat.sharereportwithnobody.txt                                             = -- Share report with : Nobody --
 angal.supplier.deleted                                                           = Deleted
 angal.supplier.email                                                             = E-mail
 angal.supplier.faxnumber                                                         = Fax number
@@ -1510,7 +1518,6 @@ angal.therapy.actions                                                           
 angal.therapy.availablem                                                         = AVAILABLE
 angal.therapy.changenotifysettingsfor                                            = Change notify settings
 angal.therapy.daydays                                                            = day/s
-angal.therapy.days                                                               = Days
 angal.therapy.deletealltherapiesfor                                              = Delete all therapies for
 angal.therapy.deleteallvisitsfor                                                 = Delete all visits for
 angal.therapy.doyouwanttosetanumernowfor                                         = Do you want to set a telephone number for
@@ -1521,7 +1528,6 @@ angal.therapy.four                                                              
 angal.therapy.frequencywithinday                                                 = Frequency within day
 angal.therapy.frequencywithinperiod                                              = Frequency within period
 angal.therapy.important                                                          = Important
-angal.therapy.months                                                             = Months
 angal.therapy.notavailable                                                       = Not available
 angal.therapy.notavailablem                                                      = NOT AVAILABLE
 angal.therapy.notchecked                                                         = Not checked
@@ -1564,6 +1570,8 @@ angal.visit.selectaward                                                         
 angal.visit.service                                                              = Service
 angal.visit.visits                                                               = Visits
 angal.visit.pleaseselectapatient.border                                          = Please Select a Patient
+angal.vodatetext.isnotavaliddate.fmt.msg                                         = "{0}" is not a valid date.
+angal.vodatetext.isnotavaliddatepleaseuseortoseparate.fmt.msg                    = "{0}" is not a valid date.  Please use / or - to separate.
 angal.ward.bedsedit                                                              = Number of beds *
 angal.ward.doctorsedit                                                           = Number of doctors *
 angal.ward.emailedit                                                             = E-mail
