OP-544 fix some of the JRadioButton shortcut keys

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -386,6 +386,10 @@ angal.medicalstockward.chooselot.btn                                            
 angal.medicalstockward.chooselot.btn.key                                         = C
 angal.opd.examination.btn                                                        = Examination
 angal.opd.examination.btn.key                                                    = E
+angal.operation.major.btn                                                        = Major
+angal.operation.major.btn.key                                                    = A
+angal.operation.minor.btn                                                        = Minor
+angal.operation.minor.btn.key                                                    = M
 angal.operationrowlist.add.btn                                                   = Add
 angal.operationrowlist.add.btn.key                                               = A
 angal.priceslist.copy.btn                                                        = Copy
@@ -412,6 +416,10 @@ angal.therapy.edittherapy.btn                                                   
 angal.therapy.edittherapy.btn.key                                                = E
 angal.therapy.removetherapy.btn                                                  = Remove Therapy
 angal.therapy.removetherapy.btn.key                                              = R
+angal.patient.male.btn                                                           = Male
+angal.patient.male.btn.key                                                       = M
+angal.patient.female.btn                                                         = Female
+angal.patient.female.btn.key                                                     = E
 angal.patientphoto.file.btn                                                      = File
 angal.patientphoto.file.btn.key                                                  = F
 angal.patientphoto.newphoto.btn                                                  = New Photo
@@ -1328,8 +1336,6 @@ angal.medicalstockwardedit.title                                                
 angal.medicalstockwardedit.tooltip.associateapatientwiththismovement             = Associate a Patient with this movement
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remove Patient association with this movement
 angal.medstockmovtype.type                                                       = Type
-angal.operation.major                                                            = Major
-angal.operation.minor                                                            = Minor
 angal.operation.operationalreadypresent                                          = Operation already present
 angal.operation.operationcontext                                                 = Context
 angal.operation.selecttype                                                       = Select type
