OP-523 Part 1; review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -18,6 +18,7 @@
 #######################
 angal.common.error.title                                                         = Error
 angal.common.info.title                                                          = Information
+angal.common.note.title                                                          = Note
 
 ########################################
 # Common button text and short cut keys
@@ -144,7 +145,6 @@ angal.admission.patientfolder.drugs.title                                       
 angal.admission.patientfolder.exams.title                                        = Exams
 angal.admission.patientfolder.operations.title                                   = Operations
 angal.admission.report.title                                                     = Report
-angal.admission.note.title                                                       = Note
 angal.admtype.admissiontypebrowser.title                                         = Admission Type Browser
 angal.admtype.newadmissiontype.title                                             = New Admission Type
 angal.admtype.editadmissiontype.title                                            = Edit Admission Type
@@ -189,7 +189,7 @@ angal.messagedialog.error.title                                                 
 angal.messagedialog.warning.title                                                = Warning
 angal.messagedialog.info.title                                                   = Information
 angal.messagedialog.question.title                                               = Question
-angal.messagedialog.note.title                                                   = Note
+angal.messagedialog.plain.title                                                  = Note
 angal.userbrowser.title                                                          = User Browser
 angal.userbrowser.addnewuser.title                                               = Add New User
 angal.userbrowser.edituser.title                                                 = Edit User
