OP-523 Part 1; first 11 files updated (#553)
* OP-523 Part 1; first 11 files updated

* OP-523 Part 1; review comments

* OP-523 Part 1; review comments

* OP-523 Part 1; review comments

* OP-523 Part 1; review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -17,10 +17,8 @@
 # Common dialog titles
 #######################
 angal.common.error.title                                                         = Error
-angal.common.warning.title                                                       = Warning
 angal.common.info.title                                                          = Information
-angal.common.question.title                                                      = Question
-angal.common.plain.title                                                         = Note
+angal.common.note.title                                                          = Note
 
 ########################################
 # Common button text and short cut keys
@@ -105,6 +103,7 @@ angal.common.from.txt                                                           
 angal.common.group.txt                                                           = Group
 angal.common.height.txt                                                          = Height
 angal.common.id.txt                                                              = ID
+angal.common.laboratory.txt                                                      = Laboratory
 angal.common.male.txt                                                            = Male
 angal.common.name.txt                                                            = Name
 angal.common.new.txt                                                             = New
@@ -128,6 +127,7 @@ angal.common.total.txt                                                          
 angal.common.type.txt                                                            = Type
 angal.common.undefined.txt                                                       = Undefined
 angal.common.units.txt                                                           = Units
+angal.common.unknown.txt                                                         = Unknown
 angal.common.ward.txt                                                            = Ward
 angal.common.weight.txt                                                          = Weight
 
@@ -151,6 +151,8 @@ angal.admtype.editadmissiontype.title                                           
 angal.agetype.agetypebrowser.title                                               = Age Type Browser
 angal.billbrowser.patientbillmanagment.title                                     = Patient Bills Management
 angal.dicomviewer.title                                                          = DICOM Viewer
+angal.dicomview.zoom.title                                                       = Zoom
+angal.dicomview.frames.title                                                     = Frames
 angal.dicomtype.dicomtypebrowser.title                                           = DICOM Type Browser
 angal.dicomtype.newdicomtype.title                                               = New DICOM Type
 angal.dicomtype.editdicomtype.title                                              = Edit DICOM Type
@@ -183,6 +185,11 @@ angal.lab.newlaboratoryexam.title                                               
 angal.lab.editlaboratoryexam.title                                               = Edit Laboratory Exam 
 angal.login.title                                                                = Login
 angal.mainmenu.fmt.title                                                         = User: {0}
+angal.messagedialog.error.title                                                  = Error
+angal.messagedialog.warning.title                                                = Warning
+angal.messagedialog.info.title                                                   = Information
+angal.messagedialog.question.title                                               = Question
+angal.messagedialog.plain.title                                                  = Note
 angal.userbrowser.title                                                          = User Browser
 angal.userbrowser.addnewuser.title                                               = Add New User
 angal.userbrowser.edituser.title                                                 = Edit User
@@ -647,6 +654,10 @@ angal.admission.count.fmt.txt                                                   
 angal.admission.admissiondate.txt                                                = Admission Date *
 angal.admission.dischargedate.txt                                                = Discharge Date
 angal.admission.treatmenttype.border                                             = Treatment Type
+
+angal.admission.sharealertwithnobody.txt                                         = -- Share alert with: nobody --
+angal.admission.newpatientadmissionin.fmt.msg                                    = New patient admission: {0} in {1}.
+angal.admisssion.discharedpatientfor.fmt.msg                                     = Discharged patient: {0} for {1}.
 
 # Patient Data dialog
 angal.admission.taxcode.label                                                    = Tax Number ID
@@ -1435,6 +1446,8 @@ angal.priceslist.pleasecreatealistfirst                                         
 angal.priceslist.pleaseselectalisttocopy                                         = Please select a List to copy
 angal.priceslist.pleaseselectalisttodelete                                       = Please select a List to delete
 angal.priceslist.pleaseselectalisttoedit                                         = Please select a List to edit
+angal.priceslist.prices.txt                                                      = Prices
+angal.priceslist.failed.txt                                                      = Failed
 angal.priceslist.roundingfactor                                                  = Rounding Factor
 angal.priceslist.rounduptothenearest                                             = Round up to the nearest...
 angal.priceslist.savelist                                                        = Save List
@@ -1579,6 +1592,7 @@ angal.ward.select                                                               
 angal.ward.wardwithpharmacy                                                      = Ward with pharmacy
 angal.wardpharmacynew.selectward                                                 = Select a ward
 angal.wardpharmacynew.ward                                                       = Another ward
+angal.wardpharmacy.stockwardledger.txt                                           = StockWard Ledger
 angal.xmpp.contacts                                                              = Contacts
 angal.xmpp.getinfo                                                               = Get info
 angal.xmpp.info                                                                  = info
